prusti-tests/tests/verify_overflow/fail/ghost/test.rs
// compile-flags: -Punsafe_core_proof=true
#![allow(unused)]
use prusti_contracts::*;
fn main() {}